<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/you_need_to_input_data_for_today"
        android:textAlignment="textStart"
        android:textSize="16sp"
        style="@style/TitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleepHoursTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_much_did_you_sleep_last_night"
        android:textAlignment="textStart"
        android:textSize="16sp"
        style="@style/NormalStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.slider.Slider
        android:id="@+id/hoursSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        tools:value="10"
        android:valueTo="24"
        android:stepSize="0.5"
        app:labelBehavior="floating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleepHoursTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/feelingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_did_you_feel_this_am"
        android:textAlignment="textStart"
        android:textSize="16sp"
        style="@style/NormalStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hoursSeekBar"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.slider.Slider
        android:id="@+id/feelingSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        tools:value="5"
        android:valueTo="10"
        android:stepSize="1"
        app:labelBehavior="floating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feelingTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/notesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/any_other_notes"
        android:textAlignment="textStart"
        android:textSize="16sp"
        style="@style/NormalStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feelingSeekBar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toStartOf="@+id/photoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notesTextView" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notesEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/notesEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesTextView"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>